--- a/Inicio de sesion/CrearCuenta.html
+++ b/Inicio de sesion/CrearCuenta.html
@@ -12,11 +12,11 @@
     <link rel="icon" href="imagenes/171596201.png">
 
 </head>
-<body>
+<body class="cuerpo-contraseña">
     <!-- Formulario crear cuenta-->
-    <form action="">
+    <form class="form">
         <img id="img" src="imagenes/Usiario.png" width="30%" alt="">
-        <h1>Crear cuenta</h1>
+        <h1 class="titulo-contraseña">Crear cuenta</h1>
         <label for="nombre"></label>
         <input type="text" id="nombre" placeholder="Nombre.." size="30" required>
         <label for="correo"></label>
