--- a/Inicio de sesion/OlvidoSuContraseña.html
+++ b/Inicio de sesion/OlvidoSuContraseña.html
@@ -11,12 +11,12 @@
     <!-- Logo -->
     <link rel="icon" href="imagenes/171596201.png">
 </head>
-<body>
+<body class="cuerpo-contraseña">
     <!-- Formulario olvido su contraseña-->
-    <form action="">
+    <form class="form">
         <img id="img" src="imagenes/Usiario.png" width="30%" alt="">
-        <h1>¿No recuerdas tu contraseña?</h1>
-        <h4>Por favor, ingrese su dirección de correo o número telefónico.</h5>
+        <h1 class="titulo-contraseña">¿No recuerdas tu contraseña?</h1>
+        <h4 class="subtitulo3">Por favor, ingrese su dirección de correo o número telefónico.</h4>
         <label for="correoRecuperacion"></label>
         <input type="text" id="correoRecuperacion" placeholder="Correo electronico o telefono.." size="30" autofocus >
         <a href="recuperacion.html" class="boton"><button type="button">Continuar</button></a>
