--- a/Inicio de sesion/cambiarContraseña.html
+++ b/Inicio de sesion/cambiarContraseña.html
@@ -11,12 +11,12 @@
     <!-- Logo -->
     <link rel="icon" href="imagenes/171596201.png">
 </head>
-<body>
+<body class="cuerpo-contraseña">
     <!-- Formulario cambiar contraseña-->
-    <form action="">
+    <form class="form">
         <img id="img" src="imagenes/Usiario.png" width="30%" alt="">
-        <h1>Cambiar contraseña</h1>
-        <h5>Introduce tu nueva contraseña</h5>
+        <h1 class="titulo-contraseña">Cambiar contraseña</h1>
+        <h5 class="subtitulo2">Introduce tu nueva contraseña</h5>
         <label for="cambiarContraseña"></label>
         <input type="password" id="cambiarContraseña" placeholder="Contraseña.." size="30" autofocus>
         <label for="contraseña2"></label>
