--- a/Inicio de sesion/index.html
+++ b/Inicio de sesion/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="icon" href="imagenes/171596201.png">
 </head>
-<body>
+<body class="cuerpo-contraseña">
     <!-- Formulario de iniciar sesion -->
-    <form>
+    <form class="form">
         <img id="img" src="imagenes/Usiario.png" width="30%" alt="">
-        <h1>Inicio de Sesion</h1>
+        <h1 class="titulo-contraseña">Inicio de Sesion</h1>
         <label for="inicio"></label>
         <input type="text" id="inicio" placeholder="Nombre.." size="30" autofocus required>
         <label for="contrasena"></label>
@@ -24,7 +24,7 @@
         <img src="imagenes/pasword.png" class="pass"  alt="">
         <!-- Boton de iniciar -->
         <a href="#" class="boton"><button>Iniciar</button></a>
-        <h5>Continuar con</h5>
+        <h5 class="subtitulo2">Continuar con</h5>
         <!-- Iconos para inciar sesion con Gmail, Facebook y Outlook. -->
          <div class="iconos">
             <a href="https://www.google.com/intl/es/gmail/about/"><img src="imagenes/gmail.png" width="7%" alt="" title="Gmail" ></a>
@@ -32,7 +32,7 @@
             <a href="https://outlook.live.com"><img src="imagenes/Outlook.png" width="7%" alt="" title="Outlook"></a>
         </div>
         <!-- Opcion de crear cuenta -->
-        <h5>¿No tienes cuenta?</h5>
+        <h5 class="subtitulo2">¿No tienes cuenta?</h5>
         <a href="CrearCuenta.html" class="nuevo">Crear cuenta</a>
     </form>
 </body>
