--- a/Inicio de sesion/recuperacion.html
+++ b/Inicio de sesion/recuperacion.html
@@ -11,12 +11,12 @@
     <!-- Logo -->
     <link rel="icon" href="imagenes/171596201.png">
 </head>
-<body>
+<body class="cuerpo-contraseña">
     <!-- Formulario de recuperacion -->
-    <form action="">
+    <form class="form">
         <img id="img" src="imagenes/Usiario.png" width="30%" alt="">
-        <h1>Recuperación</h1>
-        <h4>Les hemos enviado un codigo a su correo o telefono, de esta forma, sabremos que tu cuenta te pertenece.</h5>
+        <h1 class="titulo-contraseña">Recuperación</h1>
+        <h4 class="subtitulo3">Les hemos enviado un codigo a su correo o telefono, de esta forma, sabremos que tu cuenta te pertenece.</h4>
         <label for="Recuperacion"></label>
         <input type="text" id="Recuperacion" placeholder="000-000" size="30" autofocus>
         <a href="cambiarContraseña.html" class="boton"><button type="button">Verificar</button></a>
